# FFmpeg7.0

./: .gitignore  CMakeLists.txt  README.md
include/: ffmpeg.h
resource/: buildLenna-500X500.bat
src/: 01-FFmpeg_information.cpp  02-Video_Information.cpp  03-Decode_video_stream.cpp  CMakeLists.txt
third/: README.md
